add other recipes links and img to main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <title>Yummy</title>
     </head>
     <body>
+        <img src="./imgs/mainpgimg.webp">
         <h1>Odin Recipes</h1>
-        <a href="./recipes/soylent.green.html">Soylent Green</a>
+        <ul>
+            <li><a href="./recipes/soylent.green.html">Soylent Green</a></li>
+            <li><a href="./recipes/stone.soup.html">Stone Soup</a></li>
+            <li><a href="./recipes/romulan.ale.html">Romulan Ale</a></li>
+        </ul>
     </body>
 </html>
