--- a/recipes/stone.soup.html
+++ b/recipes/stone.soup.html
@@ -4,10 +4,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Soylent Green</title>
+        <title>Stone Soup</title>
     </head>
     <body>
-        <h1>Soylent Green</h1>
+        <h1>Stone Soup</h1>
         <!-- add finished dish image  -->
         <img src="">
         <h2>Description</h2>
