Add finished Soylent Green recipe page

--- a/recipes/soylent.green.html
+++ b/recipes/soylent.green.html
@@ -8,21 +8,46 @@
     </head>
     <body>
         <h1>Soylent Green</h1>
-        <!-- add finished dish image  -->
-        <img src="">
+        <p><a href="../index.html">Back to Odin Recipes</a></p>
+        <img src="../imgs/soylent-green.webp" alt="soylent green can">
         <h2>Description</h2>
         <p>
-            <!-- add description -->
+            Feeling like getting good quality nutritious food is getting harder and harder?<br>
+            <a href="https://en.wikipedia.org/wiki/Make_Room!_Make_Room!"><em>Make Room, Make Room!</em></a> for this new delicacy at your dinner table.<br>
+            No matter how tough things get, you will always have something to eat!
         </p>
         <h2>Ingredients</h2>
-        <p>
+        <strong>Serving size:</strong> 6 persons
             <ul>
-                <li></li>
+                <li>1 teacup water</li>
+                <li>1 tablespoon salt</li>
+                <li>ground black pepper</li>
+                <li>500g fresh seaweeds</li>
+                <li>2Kg quality people meat</li>
             </ul>
-        </p>
+        <h2>Utensils</h2>
+        <ul>
+            <li>blender</li>
+            <li>meat press</li>
+            <li><em>meat grinder (optional)</em></li>
+            <li>frying pan</li>
+
+        </ul>
         <h2>Steps</h2>
         <ol>
-            <li type="I"></li>
+            <li>Find yourself a good, high quality human, and get 2Kg of his meat.<br>
+                (if you get more, save the rest for later, you can always make a fine stew with it).</li>
+            <li>If you have a meat grinder, mince the meat; If not, dice in very small cubes.</li>
+            <li>Add the meat and the remaining ingredients to the blender.</li>
+            <li>Season with the pepper to your taste.</li>
+            <li>Blend everything until you get a beautiful, uniform, green pulp (if its not green enough, add more seaweed).</li>
+            <li>With a soup spoon, take a piece of the mixture and place it on your meat press.</li>
+            <li>Press the mixture until its  nice and compact.<br>
+                You can then shape how you wish, but for historical consistency we suggest a square shape.
+            </li>
+            <li>Let the squares set for a couple of minutes in a piece of kitchen paper, to absorb excess water.</li>
+            <li>In a medium heated frying pan, put your squares just long enough just so they get a beautiful vibrant green colour. </li>
+            <li>Serve while its hot!</li>
         </ol>
     </body>
 </html>
