--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Yummy</title>
     </head>
     <body>
-        <img src="./imgs/mainpgimg.webp">
+        <img src="./imgs/mainpgimg.webp" alt="man preparing food">
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/soylent.green.html">Soylent Green</a></li>
