Add finished Soylent Green page

--- a/recipes/soylent.green.html
+++ b/recipes/soylent.green.html
@@ -22,7 +22,7 @@
                 <li>1 teacup water</li>
                 <li>1 tablespoon salt</li>
                 <li>ground black pepper</li>
-                <li>500g fresh seaweeds</li>
+                <li>500g fresh seaweeds (or any other green plant thing)</li>
                 <li>2Kg quality people meat</li>
             </ul>
         <h2>Utensils</h2>
