Add romulan ale page and visual improvements
Romulan Ale page with improvements on page layout
and better source code design.
Changes to headings sizem added a back to homepage and back to top
links in page bottom.

Added improved layout and improved source code design to
Soylent Green page.

--- a/recipes/soylent.green.html
+++ b/recipes/soylent.green.html
@@ -7,16 +7,19 @@
         <title>Soylent Green</title>
     </head>
     <body>
+
         <h1>Soylent Green</h1>
         <p><a href="../index.html">Back to Odin Recipes</a></p>
         <img src="../imgs/soylent-green.webp" alt="soylent green can">
-        <h2>Description</h2>
+        
+        <h2>Great food starts with great people!</h2>
         <p>
             Feeling like getting good quality nutritious food is getting harder and harder?<br>
             <a href="https://en.wikipedia.org/wiki/Make_Room!_Make_Room!"><em>Make Room, Make Room!</em></a> for this new delicacy at your dinner table.<br>
             No matter how tough things get, you will always have something to eat!
         </p>
-        <h2>Ingredients</h2>
+
+        <h3>Ingredients</h3>
         <strong>Serving size:</strong> 6 persons
             <ul>
                 <li>1 teacup water</li>
@@ -25,15 +28,16 @@
                 <li>500g fresh seaweeds (or any other green plant thing)</li>
                 <li>2Kg quality people meat</li>
             </ul>
-        <h2>Utensils</h2>
+
+        <h3>Utensils</h3>
         <ul>
             <li>blender</li>
             <li>meat press</li>
             <li><em>meat grinder (optional)</em></li>
             <li>frying pan</li>
-
         </ul>
-        <h2>Steps</h2>
+
+        <h3>Steps</h3>
         <ol>
             <li>Find yourself a good, high quality human, and get 2Kg of his meat.<br>
                 (if you get more, save the rest for later, you can always make a fine stew with it).</li>
@@ -49,5 +53,10 @@
             <li>In a medium heated frying pan, put your squares just long enough just so they get a beautiful vibrant green colour. </li>
             <li>Serve while its hot!</li>
         </ol>
+        
+        <p><a href="#top">Back to top</a></p>
+        <p><a href="../index.html">Back to Odin Recipes</a></p>
+
     </body>
+
 </html>
