Add stone soup draft and lang att to recipes

--- a/recipes/romulan.ale.html
+++ b/recipes/romulan.ale.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 
-
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Romulan Ale</title>
     </head>
-    <body>
 
+    <body>
         <h1>Romulan Ale</h1>
         <p><a href="../index.html">Back to Odin Recipes</a></p>
         <img src="../imgs/stspirits-romulanale-head.jpg" alt="pair of blue romulan ale bottles ">
@@ -41,7 +40,7 @@
         <h3>Steps</h3>
         <em>Note: There is no need to sterilize the equipment, as the drink is so strong no bacterium or germs can survive in it.</em>
         <ol type="I">
-            <li>Add all igredients to blender and blend everything together until you have a nice uniform liquid</li>
+            <li>Add all ingredients to blender and blend everything together until you have a nice uniform liquid</li>
             <li>Add all the ingredients to the pan.</li>
             <li>Bring the temperature up to boiling point. Let your brew boil for at least 900 siurens</li>
             <li>Check if the brew is nice and blue (the color starts to set in at around 800 siurens of boiling)</li>
@@ -53,10 +52,9 @@
             <li>Transfer the liquid to an air tight bottle, and let it ferment inside the bottle for another 500 siurens.</li>
             <li>At this point your ale is ready to serve. Make sure you use a tall transparent glass, to show of the blue colour of your homebrew!</li>
         </ol>
-        
+
         <p><a href="#top">Back to top</a></p>
         <p><a href="../index.html">Back to Odin Recipes</a></p>
-
     </body>
 
 </html>
