--- a/recipes/soylent.green.html
+++ b/recipes/soylent.green.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 
-
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Soylent Green</title>
     </head>
-    <body>
 
+    <body>
         <h1>Soylent Green</h1>
         <p><a href="../index.html">Back to Odin Recipes</a></p>
         <img src="../imgs/soylent-green.webp" alt="soylent green can">
@@ -53,10 +52,9 @@
             <li>In a medium heated frying pan, put your squares just long enough just so they get a beautiful vibrant green colour. </li>
             <li>Serve while its hot!</li>
         </ol>
-        
+
         <p><a href="#top">Back to top</a></p>
         <p><a href="../index.html">Back to Odin Recipes</a></p>
-
     </body>
 
 </html>
