--- a/recipes/stone.soup.html
+++ b/recipes/stone.soup.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 
-
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Stone Soup</title>
     </head>
+
     <body>
         <h1>Stone Soup</h1>
-        <!-- add finished dish image  -->
-        <img src="">
-        <h2>Description</h2>
+        <p><a href="../index.html">Back to Odin Recipes</a></p>
+        <img src="../imgs/Stone_soup.gif" alt="a gif of a pot with soup ingredients being added">
+
+        <h2></h2>
         <p>
-            <!-- add description -->
+            
         </p>
-        <h2>Ingredients</h2>
+
+        <h3>Ingredients</h3>
+        <strong>Serving size: depends on how many people show up</strong>
         <p>
             <ul>
                 <li></li>
             </ul>
         </p>
-        <h2>Steps</h2>
+
+        <h3>Utensils</h3>
+        <ul>
+            <li></li>
+        </ul>
+
+        <h3>Steps</h3>
         <ol>
-            <li type="I"></li>
+            <li></li>
         </ol>
+
+        <p><a href="#top">Back to top</a></p>
+        <p><a href="../index.html">Back to Odin Recipes</a></p>
     </body>
 </html>
