Add finished recipe pages

--- a/recipes/romulan.ale.html
+++ b/recipes/romulan.ale.html
@@ -45,9 +45,9 @@
             <li>Bring the temperature up to boiling point. Let your brew boil for at least 900 siurens</li>
             <li>Check if the brew is nice and blue (the color starts to set in at around 800 siurens of boiling)</li>
             <li>For a light blue ale (less strong) remove from boiling at 900 siurens.</li>
-            <li>For a dark blue ale (stronger), let the brew boil for longer than 1000 siurens.</liu><br>
+            <li>For a dark blue ale (stronger), let the brew boil for longer than 1000 siurens.<br>
                 <em>Although there is no theoretical limit to how strong you can make the ale, by just letting it brew for longer and longer,<br>
-                we do not recommend boiling times over 2500 siurens, as the drinks becomes too strong for even Klingon stomachs.</em>
+                we do not recommend boiling times over 2500 siurens, as the drinks becomes too strong for even Klingon stomachs.</em></li>
             <li>Let the brew settle down and cool. Once its cool add the ice.</li>
             <li>Transfer the liquid to an air tight bottle, and let it ferment inside the bottle for another 500 siurens.</li>
             <li>At this point your ale is ready to serve. Make sure you use a tall transparent glass, to show of the blue colour of your homebrew!</li>
