--- a/recipes/stone.soup.html
+++ b/recipes/stone.soup.html
@@ -11,27 +11,42 @@
         <p><a href="../index.html">Back to Odin Recipes</a></p>
         <img src="../imgs/Stone_soup.gif" alt="a gif of a pot with soup ingredients being added">
 
-        <h2></h2>
+        <h2>Hearthy delight</h2>
         <p>
-            
+            Have you ever been out for a walk, got lost in thought, and ended up as a medieval monk,<br>
+            strolling hungry through a village of people who are hesitant to share their hard earned food with you, a complete stranger?<br>
+            Than this is the perfect recipe <em><a href="https://en.wikipedia.org/wiki/Stone_Soup">(scam)</a></em> for you!
         </p>
 
         <h3>Ingredients</h3>
-        <strong>Serving size: depends on how many people show up</strong>
+        <strong>Serving size:</strong> depends on how many people show up
         <p>
             <ul>
-                <li></li>
+                <li>1 regular stone, preferably one that looks interesting (don't let anyone see you picking it up)</li>
+                <li>water from the nearest body of fresh water</li>
+                <li>diverse assortment of curious and gullible people</li>
             </ul>
         </p>
 
         <h3>Utensils</h3>
         <ul>
-            <li></li>
+            <li>1 soup capable pot (fire resistent)</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li></li>
+            <li>Pick up your reliable soup pot and head to nearest fresh water source</li>
+            <li>Fill the pot</li>
+            <li>Head back to village center, and start a small cooking fire<br>
+                <strong><em>(make sure everyone in the village can see you!)</em></strong></li>
+            <li>Place the pot in the fire, and drop the stone inside the boiling water</li>
+            <li>When the villagers become curious, tell them you're preparing a delicious stone soup,<br>
+                and you are more than willing to share the dish, but unfortunately you're missing just<br>
+                a couple of ingredients to make it really delightful.</li>
+            <li>Sit back and enjoy as the villagers run home and back to add their potatoes, carrots, garlic,<br>
+                olive oil, pieces of meat, and all the other tasty food to actually make the soup</li>
+            <li>Regale with the locals</li>
+            <li>Wash your trusty pot and stone, and save them for use in your next stop</li>
         </ol>
 
         <p><a href="#top">Back to top</a></p>
