Add README content and project finished

--- a/recipes/stone.soup.html
+++ b/recipes/stone.soup.html
@@ -42,7 +42,7 @@
             <li>Place the pot in the fire, and drop the stone inside the boiling water</li>
             <li>When the villagers become curious, tell them you're preparing a delicious stone soup,<br>
                 and you are more than willing to share the dish, but unfortunately you're missing just<br>
-                a couple of ingredients to make it really delightful.</li>
+                a couple of ingredients to make it really delightful</li>
             <li>Sit back and enjoy as the villagers run home and back to add their potatoes, carrots, garlic,<br>
                 olive oil, pieces of meat, and all the other tasty food to actually make the soup</li>
             <li>Regale with the locals</li>
