--- a/recipes/stone.soup.html
+++ b/recipes/stone.soup.html
@@ -10,47 +10,64 @@
     </head>
 
     <body>
+        <img class="pic" src="../imgs/Stone_soup.gif" alt="a gif of a pot with soup ingredients being added">
         <h1>Stone Soup</h1>
-        <p><a href="../index.html">Back to Odin Recipes</a></p>
-        <img src="../imgs/Stone_soup.gif" alt="a gif of a pot with soup ingredients being added">
 
-        <h2>Hearthy delight</h2>
-        <p>
-            Have you ever been out for a walk, got lost in thought, and ended up as a medieval monk,<br>
-            strolling hungry through a village of people who are hesitant to share their hard earned food with you, a complete stranger?<br>
-            Than this is the perfect recipe <em><a href="https://en.wikipedia.org/wiki/Stone_Soup">(scam)</a></em> for you!
-        </p>
+        <br>
+        <div id="description">
+            <h2>Hearthy delight</h2>
+            <hr>
+            <p>
+                Have you ever been out for a walk, got lost in thought, and ended up as a medieval monk,<br>
+                strolling hungry through a village of people who are hesitant to share their hard earned food with you, a complete stranger?<br>
+                Than this is the perfect recipe <strong><em><a href="https://en.wikipedia.org/wiki/Stone_Soup">(scam)</a></em></strong> for you!
+            </p>
+        </div>
 
-        <h3>Ingredients</h3>
-        <strong>Serving size:</strong> depends on how many people show up
-        <ul>
-            <li>1 regular stone, preferably one that looks interesting (don't let anyone see you picking it up)</li>
-            <li>water from the nearest body of fresh water</li>
-            <li>diverse assortment of curious and gullible people</li>
-        </ul>
+        <br>
+        <div id="ingredients">
+            <h3>Ingredients</h3>
+            <hr>
+            <strong>Serving size:</strong> depends on how many people show up
+            <ul>
+                <li>1 regular stone, preferably one that looks interesting (don't let anyone see you picking it up)</li>
+                <li>water from the nearest body of fresh water</li>
+                <li>diverse assortment of curious and gullible people</li>
+            </ul>
+        </div>
 
-        <h3>Utensils</h3>
-        <ul>
-            <li>1 soup capable pot (fire resistent)</li>
-        </ul>
+        <br>
+        <div id="utensils">
+            <h3>Utensils</h3>
+            <hr>
+            <ul>
+                <li>1 soup capable pot (fire resistent)</li>
+            </ul>
+        </div>
 
-        <h3>Steps</h3>
-        <ol>
-            <li>Pick up your reliable soup pot and head to nearest fresh water source</li>
-            <li>Fill the pot</li>
-            <li>Head back to village center, and start a small cooking fire<br>
-                <strong><em>(make sure everyone in the village can see you!)</em></strong></li>
-            <li>Place the pot in the fire, and drop the stone inside the boiling water</li>
-            <li>When the villagers become curious, tell them you're preparing a delicious stone soup,<br>
-                and you are more than willing to share the dish, but unfortunately you're missing just<br>
-                a couple of ingredients to make it really delightful</li>
-            <li>Sit back and enjoy as the villagers run home and back to add their potatoes, carrots, garlic,<br>
-                olive oil, pieces of meat, and all the other tasty food to actually make the soup</li>
-            <li>Regale with the locals</li>
-            <li>Wash your trusty pot and stone, and save them for use in your next stop</li>
-        </ol>
+        <br>
+        <div id="steps">
+            <h3>Steps</h3>
+            <hr>
+            <ol>
+                <li>Pick up your reliable soup pot and head to nearest fresh water source</li>
+                <li>Fill the pot</li>
+                <li>Head back to village center, and start a small cooking fire<br>
+                    <strong><em>(make sure everyone in the village can see you!)</em></strong></li>
+                <li>Place the pot in the fire, and drop the stone inside the boiling water</li>
+                <li>When the villagers become curious, tell them you're preparing a delicious stone soup,<br>
+                    and you are more than willing to share the dish, but unfortunately you're missing just<br>
+                    a couple of ingredients to make it really delightful</li>
+                <li>Sit back and enjoy as the villagers run home and back to add their potatoes, carrots, garlic,<br>
+                    olive oil, pieces of meat, and all the other tasty food to actually make the soup</li>
+                <li>Regale with the locals</li>
+                <li>Wash your trusty pot and stone, and save them for use in your next stop</li>
+            </ol>
+        </div>
 
-        <p><a href="#top">Back to top</a></p>
-        <p><a href="../index.html">Back to Odin Recipes</a></p>
+        <br>
+        <br>
+        <button class="button2"><a href="#top">Back to top</a></button>
+        <button class="button2"><a href="../index.html">Back to Odin Recipes</a></button>
     </body>
 </html>
